# FRAPPE

./: .gitignore  ClassIII_Info.txt  Example.ipynb  ExampleFrappeRuns.ipynb  ExampleInterpoltion.ipynb  PhotFeatures_Ray.py  README.md  earlyK_norm731_200p_1000iter_rad2.5_WholeVIS.npz  pyproject.toml  summary_classIII_SPTok_SpTErr.txt  test.ipynb
.ipynb_checkpoints/: ExampleFrappeRuns-checkpoint.ipynb  ExampleInterpoltion-checkpoint.ipynb  pyproject-checkpoint.toml  test-checkpoint.ipynb
Frappe.xcodeproj/: project.pbxproj
NIR/: flux_2MASSJ16075888-3924347_nir_tell.fits  flux_CD-31_12522_NIR_corr_scaled_phot.fits  flux_CD_29_8887A_NIR_corr_scaled_phot.fits  flux_CrA75_NIR_corr_scaled_phot.fits  flux_HBC407_NIR_corr_scaled_phot.fits  flux_J11195652-7504529_NIR_corr_scaled_phot.fits  flux_LM717_NIR_corr_scaled_phot.fits  flux_NNlup_NIR_corr_scaled_phot.fits  flux_RECX-6_NIR_corr_scaled_phot.fits  flux_RXJ1543.1-3920_NIR_corr_scaled_phot.fits  flux_Sz121_K_corr_scaled_phot_new.fits  flux_THA15-36B_NIR_corr_scaled_phot.fits  flux_THA15-38_NIR_corr_scaled_phot.fits  flux_TWA15_app2_NIR_corr_scaled_phot.fits  flux_TWA26_NIR_corr_scaled_phot.fits  flux_TWA6_NIR_corr_scaled_phot.fits  flux_V1097Sco_NIR_corr_scaled_phot.fits  flux_V1191Sco_NIR_corr_scaled_phot.fits  sp_879_NIR_J_corr.fits
UVB/: flux_2MASSJ16090850-3903430_UVB_phot.fits  flux_CD-39_10292_UVB_phot.fits  flux_CD_29_8887A_UVB_phot.fits  flux_CD_33_7795A_UVB_phot.fits  flux_CD_36_7429B_UVB_phot.fits  flux_DENIS1245_UVB_phot.fits  flux_MVlup_UVB_phot.fits  flux_MWlup_UVB_phot.fits  flux_PZ99J160843.4-260216_UVB_phot.fits  flux_Par_Lup3_2_UVB_phot.fits  flux_RECX-6_UVB_phot.fits  flux_RXJ0457.5+2014_UVB_phot.fits  flux_RXJ1515.8-3331_UVB_phot.fits  flux_RXJ1526.0-4501_UVB_phot.fits  flux_RXJ1538.6-3916_UVB_phot.fits  flux_RXJ1543.1-3920_UVB_phot.fits  flux_RXJ1547.7-4018_UVB_phot.fits  flux_RXJ1608.9-3905_UVB_phot.fits  flux_SO925_UVB_phot.fits  flux_SO999_UVB_phot.fits  flux_Sz67_UVB_phot.fits  (+5 more)
(+7436 files in other folders)
