[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "frappe-private"
version = "0.1.0"
authors = [
  { name="Rik Claes", email="rclaes@live.be" },
{ name="Carlo F. Manara", email="cmanara@eso.org" }
]
description = "Fitter for accretion properties"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "localreg==0.5.0",
  "matplotlib>=2.1.1"
  "numpy>=1.17.3",
	"scipy>=1.3.1",
	"ipywidgets>=7.5.1",
"ipympl",
"jupyter",
"astropy",
"PyQt5"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RikClaes/FRAPPE_private"
Issues = ""

[tool.hatch.build]
sources = ["src"]
